@@ -717,7 +717,7 @@ L<http://skim.cz/>
 
 =head1 LICENSE AND COPYRIGHT
 
-© 2005-2022 Michal Josef Špaček
+© 2005-2023 Michal Josef Špaček
 
 BSD 2-Clause License
 
